# tongs

./: .env  Cargo.toml  dev.db  justfile
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tongs-client/: Cargo.toml
crates/tongs-client/src/: lib.rs
crates/tongs-client/src/components/: mod.rs  navbar.rs  user_context_provider.rs
crates/tongs-client/src/hooks/: use_user_context.rs
crates/tongs-client/src/requests/: auth.rs
crates/tongs-client/src/routes/: home.rs  login.rs  mod.rs
crates/tongs-server/: Cargo.toml
crates/tongs-server/src/: application.rs  lib.rs  main.rs  tracing.rs
crates/tongs-server/src/api/: login.rs  mod.rs
crates/tongs-server/src/api/user/: current.rs  logout.rs  mod.rs
crates/tongs-server/src/auth/: middleware.rs  mod.rs  password.rs
crates/tongs-server/src/session/: in_memory_session_store.rs  mod.rs  typed_session.rs  utils.rs
migrations/: 20220427090028_create.sql  20220427091329_insert.sql
static/: index.html
