[package]
name = "tongs-client"
version = "0.0.0"
authors = ["Shoyu Vanilla <modulo641@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3", features = ["Element"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.19"
yew-router = "0.16"
yew-hooks = "0.1"
gloo-net = "0.2"
anyhow = "1.0"

shared = { path = "../shared" }
