[package]
name = "tongs-server"
version = "0.0.0"
authors = ["Shoyu Vanilla <modulo641@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
actix-web = "4.0"
actix-web-lab = "0.16"
actix-session = "0.6"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "sqlite", "uuid", "offline"] }
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
argon2 = { version = "0.4", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.5"

shared = { path = "../shared" }

[dev-dependencies]
reqwest = "0.11"
